--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,10 +17,13 @@
     <string name="help_other_problems_content">
          <![CDATA[
                 Leave a message!<br/><br/>
-                Type
           ]]>
     </string>
 
     <string name="help_send_message">send</string>
-    <string name="toning_tunner">Tunner</string>
+    <string name="toning_tunner">Tuner</string>
+    <string name="toning_violin">Violin</string>
+    <string name="toning_viola">Viola</string>
+    <string name="toning_cello">Cello</string>
+    <string name="help_type">Type</string>
 </resources>
